// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AspectRatio > Snapshot Tests > matches snapshot for default aspect ratio 1`] = `
<div
  data-radix-aspect-ratio-wrapper=""
  style="position: relative; width: 100%; padding-bottom: 56.25%;"
>
  <div
    style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  >
    <img
      alt="Test"
      src="/test.jpg"
    />
  </div>
</div>
`;

exports[`AspectRatio > Snapshot Tests > matches snapshot for square aspect ratio 1`] = `
<div
  data-radix-aspect-ratio-wrapper=""
  style="position: relative; width: 100%; padding-bottom: 100%;"
>
  <div
    style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  >
    <img
      alt="Test"
      src="/test.jpg"
    />
  </div>
</div>
`;
